<resources>
    <string name="app_name">TrabajoPOO</string>

    <!--PARA LA ACTIVITY DE REGISTRO-->
    <string name="txt_bienvenido">BIENVENIDO</string>

    <string name="txt_tipo">SELECCIONE SU OCUPACIÓN EN LA UNIVERSIDAD</string>
    <string name="tipo_alumno">ALUMNO</string>
    <string name="tipo_profesor">PROFESOR</string>
    <string name="tipo_admin">ADMINISTRADOR</string>

    <string name="txt_username">Usuario:</string>
    <string name="txt_facultad">Facultad:</string>
    <string name="txt_profesion">Profesión:</string>
    <string name="txt_departamento_profe">Departamento:</string>
    <string name="txt_centro_costo">Centro costo:</string>
    <string name="txt_sexo">Sexo:</string>
    <string name="sexo_masculino">Varón</string>
    <string name="sexo_femenino">Mujer</string>
    <string name="txt_date">Nacimiento:</string>
    <string name="txt_format_date">DD-MM-AAAA</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="title_activity_plantilla_preguntas">PlantillaPreguntas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <array name="Respuestas">
        <item name="R1">Siempre</item>
        <item name="R2">Frecuentemente</item>
        <item name="R3">A veces</item>
        <item name="R4">Rara Vez</item>
        <item name="R5">Nunca</item>
    </array>

    <string name="R_Siempre">Siempre</string>
    <string name="R_Frec">Frecuentemente</string>
    <string name="R_Avc">A veces</string>
    <string name="R_RaraV">Rara vez</string>
    <string name="R_Nunca">Nunca</string>

    <string name="btn_sgte">Siguiente</string>
    <string name="btn_ante">Anterior</string>
</resources>