<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="insideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/titulo"
            android:gravity="center|center_horizontal"
            android:text="@string/txt_bienvenido"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/garfield" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="86dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/letra2bold"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_tipo"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbalum"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_alumno"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rbadmin"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_admin"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rbprofe"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_profesor"
                        android:textColor="@color/black"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/letra2bold"
                    android:gravity="center|center_vertical"
                    android:text="@string/txt_facultad"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_txt"
                        android:layout_width="230dp"
                        android:layout_height="50dp"
                        android:background="#3000648A"
                        android:fontFamily="@font/letra2bold"
                        android:inputType="none"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:layout_marginBottom="18dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/letra2bold"
                    android:gravity="center|center_vertical"
                    android:text="@string/txt_sexo"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_varon"
                        android:layout_width="229dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:fontFamily="@font/letra2bold"
                        android:text="@string/sexo_masculino"
                        android:textSize="20sp"
                        app:buttonTint="#245061"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rb_mujer"
                        android:layout_width="223dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/letra2bold"
                        android:text="@string/sexo_femenino"
                        android:textSize="20sp"
                        app:buttonTint="#245061"
                        android:textColor="@color/black"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/letra2bold"
                    android:text="@string/txt_date"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/et_date"
                    android:layout_width="171dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:hint="@string/txt_format_date"
                    android:textSize="22sp"
                    android:textColor="@color/black"/>

                <ImageButton
                    android:id="@+id/btn_calendario"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#D1F1FD"
                    android:tint="#000000"
                    app:srcCompat="@android:drawable/ic_menu_day" />
            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="110dp"
                android:layout_marginRight="110dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/letra2bold"
                android:minHeight="48dp"
                android:onClick="ingresar"
                android:text="@string/btn_ingresar"
                android:textColor="#000000"
                android:textSize="20sp"
                app:backgroundTint="#3000648A" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
